Изменена колекция хранения станций в классе Линия